src/objects/B2JU__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approving_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approving User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>B2JU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AutoApproveAllowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AutoApproveAllowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Approved_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto-Approved Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Approved_By_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto-Approved By User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Requested__c</fullName>
        <label>Date Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Rewarded__c</fullName>
        <label>Date Rewarded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Jedi_User__c</fullName>
        <label>Jedi User</label>
        <referenceTo>Jedi_User__c</referenceTo>
        <relationshipLabel>Badges to Users</relationshipLabel>
        <relationshipName>B2JU</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Manager_ID__c</fullName>
        <formula>Jedi_User__r.User__r.ManagerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Points_Granted__c</fullName>
        <label>Points Granted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Points_Requested__c</fullName>
        <label>Points Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requesting_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requesting User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>B2JU1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Trust_Badge__c</fullName>
        <label>Trust Badge</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Trust_Badge__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Trust_Badge__c</referenceTo>
        <relationshipLabel>Badges to Users</relationshipLabel>
        <relationshipName>B2JU</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Trust_Points__c</fullName>
        <label>Trust Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <formula>Jedi_User__r.User__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User ID</label>
        <type>Text</type>
    </fields>
    <label>Badge to User</label>
    <nameField>
        <label>Badge to User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Badges to Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>